--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 }
 
 def targetJavaVersion = 17
